--- a/Html/main.html
+++ b/Html/main.html
@@ -6,6 +6,7 @@
         <title>Buscaminas</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel='stylesheet' type='text/css' media='screen' href='../Css/estilos.css'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src='../Js/main.js'></script>
     </head>
@@ -17,8 +18,14 @@
                         <h2>Facil</h2>
                     </div>
                     <div class="marcadores">
-                        <h2>10</h2>
-                        <h2>000</h2>
+                        <div class="marca">
+                            <i class="fas fa-flag bandera" id="bandera"></i>
+                            <h2>10</h2>
+                        </div>
+                        <div class="marca">
+                            <i class="far fa-clock" id="reloj"></i>
+                            <h2>000</h2>
+                        </div>
                     </div>
                     <div class="opciones">
                         <h2>x</h2>
